# OtelExp

./: .gitignore  README.md  config.debug.yaml
.mono/registry/CurrentUser/software/microsoft/csdevkit/telemetry/persistentpropertybag/microsoft.visualstudio.code.servicehost/: values.xml
.mono/registry/CurrentUser/software/microsoft/csdevkit/v1/pids/72198_133571673376281421/: values.xml
OtelClient/: README.md  annotatestub.go  auth.go  go.mod  go.sum  main.go  otel.go
OtelSender/: Dockerfile  annotatestub.go  auth.go  client.go  config.go  customexporter.go  go.mod  go.sum  main.go  otel.go  rolldice.go  version.go
OtelSender/internal/envconfig/: envconfig.go
OtelSender/internal/oconf/: envconfig.go  options.go
OtelSender/internal/otest/: collector.go
go-otel/: Dockerfile  go.mod  go.sum  go.work.sum
go-otel/auth/: auth.go
go-otel/otelapp/: main.go  otelmetrics.go
go-otel/otelclient/: main.go
go-otel/otelcustomhttpmetricexportor/: client.go  config.go  customexporter.go  version.go
go-otel/otelcustomhttpmetricexportor/internal/envconfig/: envconfig.go
go-otel/otelcustomhttpmetricexportor/internal/oconf/: envconfig.go  options.go
go-otel/otelcustomhttpmetricexportor/internal/otest/: collector.go
go-otel/otelserver/: annotatestub.go  main.go
go-otel/otelsetup/: otelsetup.go
go-otel/simpleclient/: main.go
go-otel/simpleserver/: main.go
hello-geneva-metric/: Program.cs  hello-geneva-metric.csproj  hello-geneva-metric.sln
python-otel/: pyproject.toml
python-otel/otelp/: main.py  sample_metric.py
